include/ai_assistant.h

/* ai_assistant FFI — auto-generated by cbindgen. DO NOT EDIT. */
/* Licensed under PolyForm Noncommercial 1.0.0 — see LICENSE. */


#ifndef AI_ASSISTANT_H
#define AI_ASSISTANT_H

#pragma once

#include <stdarg.h>
#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>
#include <stdlib.h>
#include <stddef.h>
#include <stdint.h>
#include <stdbool.h>

/**
 * Flat C enum mirroring Rust's `AiProvider` (17 variants).
 *
 * Two Rust variants carry data (`OpenAICompatible { base_url }` and
 * `Bedrock { region }`). They're represented as unit values here and
 * configured via companion setters:
 * - [`ai_assistant_set_openai_compatible_url`]
 * - [`ai_assistant_set_bedrock_region`]
 */
typedef enum AiProviderKind {
  AI_PROVIDER_KIND_OLLAMA,
  AI_PROVIDER_KIND_LM_STUDIO,
  AI_PROVIDER_KIND_TEXT_GEN_WEB_UI,
  AI_PROVIDER_KIND_KOBOLD_CPP,
  AI_PROVIDER_KIND_LOCAL_AI,
  AI_PROVIDER_KIND_OPEN_AI_COMPATIBLE,
  AI_PROVIDER_KIND_OPEN_AI,
  AI_PROVIDER_KIND_ANTHROPIC,
  AI_PROVIDER_KIND_GEMINI,
  AI_PROVIDER_KIND_BEDROCK,
  AI_PROVIDER_KIND_GROQ,
  AI_PROVIDER_KIND_TOGETHER,
  AI_PROVIDER_KIND_FIREWORKS,
  AI_PROVIDER_KIND_DEEP_SEEK,
  AI_PROVIDER_KIND_MISTRAL,
  AI_PROVIDER_KIND_PERPLEXITY,
  AI_PROVIDER_KIND_OPEN_ROUTER,
} AiProviderKind;

/**
 * Opaque handle type seen by C callers.
 *
 * Callers must treat the pointer as opaque and only manipulate it via
 * the `ai_assistant_*` functions.
 */
typedef struct AiAssistantHandle {
  uint8_t _private[0];
} AiAssistantHandle;

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

/**
 * Success.
 */
extern const int AI_OK;

/**
 * A required pointer argument was NULL.
 */
extern const int AI_ERR_NULL_PTR;

/**
 * A string argument was not valid UTF-8.
 */
extern const int AI_ERR_INVALID_UTF8;

/**
 * A Rust panic was caught at the FFI boundary.
 */
extern const int AI_ERR_PANIC;

/**
 * An internal synchronization primitive was poisoned (should not happen).
 */
extern const int AI_ERR_POISONED;

/**
 * Internal error — see `ai_assistant_last_error()` for details.
 */
extern const int AI_ERR_INTERNAL;

/**
 * Unknown or unsupported provider (e.g. `OpenAICompatible` without its URL).
 */
extern const int AI_ERR_UNKNOWN_PROVIDER;

/**
 * Upstream provider call failed (network, auth, timeout, ...).
 */
extern const int AI_ERR_SEND_FAILED;

/**
 * No response was produced (empty stream).
 */
extern const int AI_ERR_NO_RESPONSE;

/**
 * Creates a new assistant handle with default settings.
 *
 * Returns `NULL` only if a Rust panic was caught. The C caller should
 * check for NULL and, if so, call `ai_assistant_last_error()`.
 */
 struct AiAssistantHandle *ai_assistant_new(void) ;

/**
 * Creates a new assistant handle with a custom system prompt.
 *
 * Returns `NULL` on null / non-UTF-8 prompt or on caught panic.
 *
 * # Safety
 *
 * `prompt` must be null or a NUL-terminated C string.
 */
 struct AiAssistantHandle *ai_assistant_new_with_prompt(const char *prompt) ;

/**
 * Releases an assistant handle. **Null-safe.**
 *
 * After this call the C caller must NOT dereference the pointer and
 * should set its local to NULL to avoid accidental double-free.
 *
 * # Safety
 *
 * `handle` must either be null or a pointer produced by
 * `ai_assistant_new*` that has not already been freed.
 */
 void ai_assistant_free(struct AiAssistantHandle *handle) ;

/**
 * Updates the base system prompt.
 */
 int ai_assistant_set_system_prompt(struct AiAssistantHandle *handle, const char *prompt) ;

/**
 * Selects the provider. For `OpenAICompatible` and `Bedrock`, the
 * companion setter MUST also be called before the next `send_message`.
 */
 int ai_assistant_set_provider(struct AiAssistantHandle *handle, enum AiProviderKind kind) ;

/**
 * Sets the base URL for `OpenAICompatible`. Order-independent vs.
 * `ai_assistant_set_provider`.
 */
 int ai_assistant_set_openai_compatible_url(struct AiAssistantHandle *handle, const char *url) ;

/**
 * Sets the AWS region for `Bedrock`. Order-independent vs.
 * `ai_assistant_set_provider`.
 */
 int ai_assistant_set_bedrock_region(struct AiAssistantHandle *handle, const char *region) ;

/**
 * Sets the selected model name.
 */
 int ai_assistant_set_model(struct AiAssistantHandle *handle, const char *model) ;

/**
 * Sets the API key (empty string clears it).
 */
 int ai_assistant_set_api_key(struct AiAssistantHandle *handle, const char *key) ;

/**
 * Overrides the Ollama base URL (default `http://localhost:11434`).
 */
 int ai_assistant_set_ollama_url(struct AiAssistantHandle *handle, const char *url) ;

/**
 * Sets the sampling temperature. **Strict reject** on NaN, ±Inf, and
 * any finite value outside `[0.0, 2.0]`. Clamping is intentionally not
 * performed — it hides caller bugs.
 */
 int ai_assistant_set_temperature(struct AiAssistantHandle *handle, float temperature) ;

/**
 * Sets the conversation history retention cap.
 */
 int ai_assistant_set_max_history(struct AiAssistantHandle *handle, size_t max_history) ;

/**
 * Sends a user message and blocks until the full response is available.
 *
 * On success, `*out` is set to a Rust-allocated NUL-terminated UTF-8
 * string. The caller **must** free it via `ai_assistant_free_string`.
 *
 * When built with `--features "ffi,rag"`, the call automatically
 * dispatches to `generate_sync_with_rag` (which builds context from the
 * indexed corpus). Otherwise the plain `generate_sync(msg, "")` path is
 * used — the core blocking primitive, not RAG-aware.
 */
 int ai_assistant_send_message(struct AiAssistantHandle *handle, const char *prompt, char **out) ;

/**
 * Sends a user message and dispatches partial chunks to `callback` as
 * they arrive. Blocks until the terminal event has been delivered.
 *
 * The `callback` parameter is a C function pointer of signature:
 * `void (*)(const char* chunk, bool is_final, void* user_data)`.
 * It **must not be NULL** — Rust function pointer types are non-nullable.
 *
 * `chunk` passed to the callback is a borrowed NUL-terminated UTF-8
 * string valid only for the duration of the callback invocation — copy
 * it if you need to keep it. `is_final = true` indicates the terminal
 * event (after which no further callbacks will be dispatched for this
 * call).
 *
 * Re-entrancy into any other `ai_assistant_*` function from within the
 * callback on the same handle is **undefined behavior**.
 */

int ai_assistant_send_message_stream(struct AiAssistantHandle *handle,
                                     const char *prompt,
                                     void (*callback)(const char *chunk,
                                                      bool is_final,
                                                      void *user_data),
                                     void *user_data)
;

/**
 * Clears the current conversation history.
 */
 int ai_assistant_clear_conversation(struct AiAssistantHandle *handle) ;

/**
 * Starts a fresh session (new conversation + session store entry).
 */
 int ai_assistant_new_session(struct AiAssistantHandle *handle) ;

/**
 * Frees a string previously produced by `ai_assistant_send_message`.
 * **Null-safe.**
 *
 * # Safety
 *
 * `s` must either be null or a pointer produced by
 * `CString::into_raw` (i.e. the `*out` of `ai_assistant_send_message`).
 */
 void ai_assistant_free_string(char *s) ;

/**
 * Returns a borrowed pointer to the last error message on the current
 * thread, or NULL if there is no pending error.
 *
 * The returned pointer is valid until the next FFI call on this thread.
 * The C caller must **not** free it.
 */
 const char *ai_assistant_last_error(void) ;

/**
 * Returns the library version as a static NUL-terminated C string
 * ("0.2.11"). The C caller must **not** free it.
 */
 const char *ai_assistant_version(void) ;

/**
 * Returns the FFI ABI version. Currently `1`. Bumps on breaking
 * changes to any of the `extern "C"` signatures or the return-code enum.
 */
 int ai_assistant_abi_version(void) ;

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus

#endif  /* AI_ASSISTANT_H */